# score_reference_integration

./: .bazelrc  BUILD  MODULE.bazel  README.md  communication_changes.patch  integration_test.sh  known_good.json  known_good.updated.json  pyproject.toml  score_modules.MODULE.bazel  score_starter  score_toolchains.MODULE.bazel  versions.json
.github/codeql/: codeql-config.yml
.github/tools/: qnx_credential_helper.py
.github/workflows/: build_and_test_autosd.yml  build_and_test_ebclfsa.yml  build_and_test_linux.yml  build_and_test_qnx.yml  check_release_approvals.yml  codeql-multiple-repo-scan.yml  docs_cleanup.yml  format.yml  known_good_correct.yml  known_good_update.yml  reusable_integration-build.yml  reusable_smoke-test.yml  test_and_docs.yml  test_integration.yml
bazel_common/: bundlers.bzl  score_basic_bazel.MODULE.bazel  score_gcc_toolchains.MODULE.bazel  score_images.MODULE.bazel  score_modules_target_sw.MODULE.bazel  score_modules_tooling.MODULE.bazel  score_python.MODULE.bazel  score_qnx_toolchains.MODULE.bazel  score_rust_toolchains.MODULE.bazel
docs/: index.rst
docs/release_notes/: score_07.rst
feature_integration_tests/configs/: BUILD
feature_integration_tests/itf/: BUILD  test_showcases.py  test_ssh.py
feature_integration_tests/test_cases/: BUILD  conftest.py  fit_scenario.py  persistency_scenario.py  pytest.ini  test_properties.py
feature_integration_tests/test_cases/tests/basic/: test_orchestration_with_persistency.py
feature_integration_tests/test_cases/tests/persistency/: test_combined_requirements.py  test_datatype_support.py  test_default_values.py  test_reset_to_default.py
feature_integration_tests/test_scenarios/cpp/src/internals/persistency/: kvs_build_helpers.h  kvs_instance.cpp  kvs_instance.h
feature_integration_tests/test_scenarios/cpp/src/scenarios/persistency/: default_values.cpp  default_values_ignored.cpp  multi_instance_isolation.cpp  reset_to_default.cpp  supported_datatypes.cpp  utf8_defaults.cpp
feature_integration_tests/test_scenarios/rust/: BUILD
feature_integration_tests/test_scenarios/rust/src/: main.rs
feature_integration_tests/test_scenarios/rust/src/internals/: mod.rs
feature_integration_tests/test_scenarios/rust/src/internals/kyron/: runtime_helper.rs
feature_integration_tests/test_scenarios/rust/src/internals/persistency/: kvs_instance.rs  kvs_parameters.rs  mod.rs
feature_integration_tests/test_scenarios/rust/src/scenarios/: mod.rs
images/autosd/: BUILD.bazel
images/autosd/scripts/: run_qemu
images/autosd_x86_64/: BUILD.bazel
images/ebclfsa_aarch64/: BUILD
images/ebclfsa_aarch64/persistency_integration/: BUILD  run_qemu.sh
images/ebclfsa_aarch64/persistency_integration/scripts/: cpp_tests_persistency.sh
images/ebclfsa_aarch64/scrample_integration/: BUILD  run_qemu.sh
images/linux_x86_64/: BUILD
images/qnx_x86_64/: BUILD
images/qnx_x86_64/configs/: BUILD  network_setup_dhcp.sh
main/: genindex.html  index.html  needs.json  objects.inv  search.html  searchindex.js
main/_collections/score_platform/docs/: index.html
main/_collections/score_platform/docs/contribute/: index.html
main/_collections/score_platform/docs/design_decisions/: DR-001-infra.html  DR-002-infra.html  DR-003-infra.html  DR-004-infra.html  index.html
main/_collections/score_platform/docs/features/: index.html
main/_collections/score_platform/docs/handbook/: index.html
main/_collections/score_platform/docs/introduction/: index.html
main/_collections/score_platform/docs/modules/: index.html
main/_collections/score_platform/docs/platform_management_plan/: change_management.html  config_management.html  documentation_management.html  index.html  problem_resolution.html  project_management.html  quality_management.html  release_management.html  safety_management.html  security_management.html  software_development.html  software_verification.html  tool_management.html
main/_collections/score_platform/docs/requirements/: index.html
main/_collections/score_platform/docs/score_releases/: index.html  platform_release_note.html
main/_collections/score_platform/docs/score_tools/: doc_as_code.html  index.html
main/_collections/score_process/process/: index.html
main/_collections/score_process/process/folder_templates/: index.html
main/_collections/score_process/process/general_concepts/: index.html  score_building_blocks_concept.html  score_lifecycle_concept.html  score_review_concept.html  score_traceability_concept.html
main/_collections/score_process/process/introduction/: index.html
main/_collections/score_process/process/process_areas/: index.html
main/_collections/score_process/process/roles/: index.html
main/_collections/score_process/process/standards/: index.html
main/_collections/score_process/process/trustable/: index.html
main/_collections/score_process/process/workflows/: index.html
main/_collections/score_process/process/workproducts/: index.html
main/_sources/: index.rst.txt
patches/: BUILD  persistency_changes.patch
patches/communication/: 001-expose-comm-examples.patch  002-tests-visibility.patch  003-module-deps-visibility.patch
runners/docker_x86_64/scripts/: BUILD
runners/qemu_x86_64/: BUILD
runners/qemu_x86_64/scripts/: BUILD
rust_coverage/: BUILD
scripts/: __init__.py  generate_rust_analyzer_support.sh  integration_test.py  publish_integration_summary.py  quality_runners.py
scripts/known_good/: __init__.py  known_good_to_workspace_metadata.py  override_known_good_repo.py  update_module_from_known_good.py  update_module_latest.py
scripts/known_good/models/: __init__.py  known_good.py  module.py
scripts/models/: __init__.py  build_config.py
scripts/workflow/: checkout_repos.sh  parse_repos.sh  recategorize_guidelines.sh
showcases/: BUILD
showcases/cli/: BUILD  main.rs
showcases/orchestration_persistency/: BUILD  main.rs
showcases/simple_lifecycle/: BUILD  lifecycle_signal.sh
showcases/simple_lifecycle/configs/: BUILD
showcases/standalone/: BUILD
tools/: update_module_from_known_good.py  update_module_latest.py
(+490 files in other folders)
