# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

module(
    name = "score_reference_integration",
    version = "0.0.0",
    compatibility_level = 0,
)

include("//:score_modules.MODULE.bazel")

# for building documentation, verifying traceability etc.
bazel_dep(name = "score_platform", version = "0.3.0")
bazel_dep(name = "score_bazel_platforms", version = "0.0.2")


# QNX toolchain
bazel_dep(name = "score_toolchains_qnx", version = "0.0.2")
toolchains_qnx = use_extension("@score_toolchains_qnx//:extensions.bzl", "toolchains_qnx")
toolchains_qnx.sdp(
    sha256 = "f2e0cb21c6baddbcb65f6a70610ce498e7685de8ea2e0f1648f01b327f6bac63",
    strip_prefix = "installation",
    url = "https://www.qnx.com/download/download/79858/installation.tgz",
)
use_repo(toolchains_qnx, "toolchains_qnx_sdp")
use_repo(toolchains_qnx, "toolchains_qnx_qcc")
use_repo(toolchains_qnx, "toolchains_qnx_ifs")
register_toolchains(
    "@toolchains_qnx_ifs//:ifs_x86_64",
    "@toolchains_qnx_ifs//:ifs_aarch64",
    dev_dependency = True,
)

#gcc toolchain for baselibs
bazel_dep(name = "score_toolchains_gcc", version = "0.5", dev_dependency = False)
gcc = use_extension("@score_toolchains_gcc//extentions:gcc.bzl", "gcc", dev_dependency = False)
# Align toolchain archive with persistency module (v0.0.3) so its labels (e.g. host_gcc_12) are present.
gcc.toolchain(
    url = "https://github.com/eclipse-score/toolchains_gcc_packages/releases/download/v0.0.3/x86_64-unknown-linux-gnu_gcc12.tar.gz",
    sha256 = "8fa85c2a93a6bef1cf866fa658495a2416dfeec692e4246063b791abf18da083",
    strip_prefix = "x86_64-unknown-linux-gnu",
)
gcc.extra_features(
    features = [
        "minimal_warnings",
        "treat_warnings_as_errors",
    ],
)
gcc.warning_flags(
    minimal_warnings = ["-Wall", "-Wno-error=deprecated-declarations", "-Wno-error=narrowing"],
    strict_warnings = ["-Wextra", "-Wpedantic"],
    treat_warnings_as_errors = ["-Werror"],
)
use_repo(gcc, "gcc_toolchain", "gcc_toolchain_gcc")
register_toolchains("@gcc_toolchain//:all")

# LLVM Toolchains
bazel_dep(name = "toolchains_llvm", version = "1.2.0") # persistency module uses 1.2.0 and does not work with 1.4.0 yet
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    cxx_standard = {"": "c++17"},
    llvm_version = "19.1.0",
)
use_repo(llvm, "llvm_toolchain")
use_repo(llvm, "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")

## Python
bazel_dep(name = "rules_python", version = "1.4.1")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python)

# Special imports for certain modules

# # TODO: What is this for? -> com dep
archive_override(
    module_name = "rules_boost",
    strip_prefix = "rules_boost-master",
    urls = ["https://github.com/nelhage/rules_boost/archive/refs/heads/master.tar.gz"],
)

# # TODO: we cannot use communication without including TRLC here?
bazel_dep(name = "trlc", version = "0.0.0")
git_override(
    module_name = "trlc",
    remote = "https://github.com/bmw-software-engineering/trlc.git",
    commit = "650b51a47264a4f232b3341f473527710fc32669",  # trlc-2.0.2 release
)

# needed for orchestrator module
bazel_dep(name = "score_virtualization", version = "0.0.1")
git_override(
    module_name = "score_virtualization",
    commit = "31966b7ad85a03efe5b2cfc8884d9812a6a82a88",
    remote = "https://github.com/qorix-group/score_virtualization.git",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip", dev_dependency = False)
pip.parse(
    hub_name = "pip_score_venv_test",
    python_version = PYTHON_VERSION,
    requirements_lock = "@score_orchestrator//component_integration_tests/python_test_cases:requirements.txt.lock",
)

use_repo(pip, "pip_score_venv_test")

# needed for persistency module
bazel_dep(name = "testing-utils")
git_override(
    module_name = "testing-utils",
    commit = "a847c7464cfa47e000141631d1223b92560d2e58",  # tag v0.2.0
    remote = "https://github.com/qorix-group/testing_tools.git",
)
# because testing-utils depends on an old version....
bazel_dep(name = "score-baselibs", version = "", dev_dependency = False)
git_override(
    module_name = "score-baselibs",
    commit = "06a27a163a2aa787e1b99f6b04feb00b413b3355",
    remote = "https://github.com/eclipse-score/baselibs.git",
)
