# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

module(
    name = "score_reference_integration",
    version = "0.5.0-alpha",
    compatibility_level = 0,
)

include("//:score_modules.MODULE.bazel")
include("//:score_toolchains.MODULE.bazel")


## Python
bazel_dep(name = "rules_python", version = "1.4.1")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python)

# Special imports for certain modules

# communication module dependencies
# archive_override are not forwarded by bazel_dep, so we need to redefine it here
archive_override(
    module_name = "rules_boost",
    strip_prefix = "rules_boost-master",
    urls = ["https://github.com/nelhage/rules_boost/archive/refs/heads/master.tar.gz"],
)

# git_override are not forwarded by bazel_dep, so we need to redefine it here
git_override(
    module_name = "trlc",
    remote = "https://github.com/bmw-software-engineering/trlc.git",
    commit = "650b51a47264a4f232b3341f473527710fc32669",  # trlc-2.0.2 release
)

# imports for the feature showcase module
bazel_dep(name = "rules_rust", version = "0.61.0")
bazel_dep(name = "score_itf", version = "0.1.0")
bazel_dep(name = "score_crates", version = "0.0.4")
git_override(
    module_name = "score_crates",
    remote = "https://github.com/eclipse-score/score-crates.git",
    commit = "a4d1c484327141083819a08a7ddaa24754307db8",
)
