# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "score_ref_int",
)

# Include common modules
include("//bazel_common:score_basic_bazel.MODULE.bazel")

# GCC toolchains
include("//bazel_common:score_gcc_toolchains.MODULE.bazel")  # WIP: Not used yet as have problems with IFS toolchain

# GCC toolchains
include("//bazel_common:score_qnx_toolchains.MODULE.bazel")  # WIP: Not used yet as have problems with IFS toolchain

# Rust toolchains
include("//bazel_common:score_rust_toolchains.MODULE.bazel")

# Python support
include("//bazel_common:score_python.MODULE.bazel")

# Score modules tools
include("//bazel_common:score_modules_tooling.MODULE.bazel")

# Score modules
include("//bazel_common:score_modules_target_sw.MODULE.bazel")

# Score test images
include("//bazel_common:score_images.MODULE.bazel")

bazel_dep(name = "rules_boost", repo_name = "com_github_nelhage_rules_boost")
archive_override(
    module_name = "rules_boost",
    strip_prefix = "rules_boost-master",
    urls = ["https://github.com/nelhage/rules_boost/archive/refs/heads/master.tar.gz"],
)

# Implicit dependencies for score_communication
bazel_dep(name = "download_utils", version = "1.2.2")

download_archive = use_repo_rule("@download_utils//download/archive:defs.bzl", "download_archive")

download_archive(
    name = "json_schema_validator",
    build = "//third_party/json_schema_validator:json_schema_validator.BUILD",
    dev_dependency = True,
    strip_prefix = "json-schema-validator-2.1.0",
    urls = ["https://github.com/pboettch/json-schema-validator/archive/refs/tags/2.1.0.tar.gz"],
)

# Implicit dependencies for score_tooling
bazel_dep(name = "aspect_rules_lint", version = "2.3.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1")
bazel_dep(name = "score_rust_policies", version = "0.0.5")

# TRLC dependency for requirements traceability
bazel_dep(name = "trlc")
git_override(
    module_name = "trlc",
    commit = "650b51a47264a4f232b3341f473527710fc32669",  # trlc-2.0.2 release
    remote = "https://github.com/bmw-software-engineering/trlc.git",
)
