# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

bazel_dep(name = "score_baselibs")
single_version_override(
    module_name = "score_baselibs",
    version = "0.1.3",
)

bazel_dep(name = "score_communication")
single_version_override(
    module_name = "score_communication",
    version = "0.1.1",
)

bazel_dep(name = "score_persistency")
single_version_override(
    module_name = "score_persistency",
    version = "0.2.0",
)

bazel_dep(name = "score_orchestrator")
single_version_override(
    module_name = "score_orchestrator",
    version = "0.0.3",
)

bazel_dep(name = "score_tooling")
single_version_override(
    module_name = "score_tooling",
    version = "1.0.2",
)

bazel_dep(name = "score_platform")
single_version_override(
    module_name = "score_platform",
    version = "0.3.0",
)

bazel_dep(name = "score_bazel_platforms")
single_version_override(
    module_name = "score_bazel_platforms",
    version = "0.0.2",
)

bazel_dep(name = "score_test_scenarios")
single_version_override(
    module_name = "score_test_scenarios",
    version = "0.3.0",
)
