# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
bazel_dep(name = "rules_rust", version = "0.61.0")

bazel_dep(name = "score_toolchains_rust", version = "0.4.0", dev_dependency = True)

git_override(
    module_name = "rules_rust",
    commit = "293337fd6402ec3dfbeb8f2d589f38ad9124dadd",
    remote = "https://github.com/pawelrutkaq/rules_rust.git",  # To be fixed once rule_rust is in score bazel registry
)
