# *******************************************************************************
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")

sh_binary(
    name = "run",
    srcs = ["//runners/docker_x86_64/scripts:run_docker"],
    args = [
        "$(location :image_load)",
    ],
    data = [
        ":image_load",
    ],
    env = {
        "OCI_IMAGE": "score_showcases_autosd:latest",
    },
)

alias(
    name = "image",
    actual = select({
        "@platforms//cpu:x86_64": ":image_amd64",
    }),
)

oci_image(
    name = "image_amd64",
    base = "@eclipse_autosd10_qemu_amd64",
    tars = [
        "//showcases:showcases_pkg_tar",
    ],
)

oci_load(
    name = "image_load",
    image = ":image",
    repo_tags = ["score_showcases_autosd:latest"],
    visibility = [
        "//feature_integration_tests/itf:__pkg__",
    ],
)
