# *******************************************************************************
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
load("@rules_rpm//:defs.bzl", "rpm_package")

alias(
    name = "image",
    actual = "//showcases:showcases_all",
    visibility = ["//visibility:public"],
)

rpm_package(
    name = "score-showcases",
    data = [
        "//showcases:showcases_all",
    ],
    data_dir = "/usr/share/score/examples",
    description = "Eclipse S-CORE Reference Integration Showcases",
    summary = "Eclipse S-CORE Reference Integration Showcases",
    version = "0.6.0",
)

sh_binary(
    name = "run",
    srcs = ["//runners/docker_x86_64/scripts:run_docker.sh"],
    args = [
        "$(location :image)",
    ],
    data = [
        ":image",
    ],
    env = {
        "OCI_IMAGE": "quay.io/centos/centos:stream10",
    },
)
